--- a/src/GUI/AboutPage.fxml
+++ b/src/GUI/AboutPage.fxml
@@ -3,57 +3,79 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AboutPageController">
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
+      <Image url="/menu1.png"/>
+   </ImageView>
 
-   <Text fill="WHITE" layoutX="247.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About">
-      <font>
-         <Font name="Tahoma" size="39.0" />
-      </font>
-   </Text>
-   <Text fill="WHITE" layoutX="25.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SimpleJavaCrypter is a program written in java which combines a number of useful functions: encryption/decryption of text and files with various algorithms,     file and text hash-sum calculation and hush-sum checker. There are several encryption algorithms available right now: AES-128, AES-256, DES and SimpleCipher." textAlignment="JUSTIFY" wrappingWidth="550.0">
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Text>
-   <Text fill="WHITE" layoutX="188.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author">
+                     <Text fill="WHITE" layoutX="272.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About">
       <font>
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Text fill="WHITE" layoutX="25.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="More info:">
-      <font>
-         <Font name="Tahoma" size="14.0" />
-      </font>
-   </Text>
-   <Hyperlink layoutX="96.0" layoutY="143.0" onAction="#repoLinkAction" text="https://github.com/MasterFlomaster1/SimpleJavaCrypter">
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Hyperlink>
-    <ImageView fitHeight="149.0" fitWidth="149.0" layoutX="25.0" layoutY="200.0">
+   <VBox alignment="TOP_CENTER" layoutY="74.0" prefHeight="300.0" prefWidth="600.0" spacing="20.0">
+      <children>
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="SimpleJavaCrypter is a program written in java which combines a number of useful functions: encryption/decryption of text and files with various algorithms,     file and text hash-sum calculation and hush-sum checker. There are several encryption algorithms available right now: AES-128, AES-256, DES and SimpleCipher." textAlignment="JUSTIFY" wrappingWidth="550.0">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Text>
+         <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" prefHeight="28.0" prefWidth="550.0">
+            <children>
+               <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="More info:">
+                  <font>
+                     <Font name="Tahoma" size="14.0" />
+                  </font>
+               </Text>
+               <Hyperlink onAction="#repoLinkAction" text="https://github.com/MasterFlomaster1/SimpleJavaCrypter">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Hyperlink>
+            </children>
+         </HBox>
+         <HBox maxWidth="-Infinity" prefHeight="100.0" prefWidth="550.0" spacing="10.0">
+            <children>
+                <ImageView fitHeight="149.0" fitWidth="149.0">
         <Image url="/profile.jpg"/>
     </ImageView>
-   <Text fill="WHITE" layoutX="188.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MasterFlomaster1">
-      <font>
-         <Font name="Tahoma" size="14.0" />
-      </font>
-   </Text>
-   <Hyperlink layoutX="277.0" layoutY="260.0" onAction="#profileLinkAction" text="https://github.com/MasterFlomaster1">
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Hyperlink>
-   <Text fill="WHITE" layoutX="188.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Github profile:">
-      <font>
-         <Font name="Tahoma" size="14.0" />
-      </font>
-   </Text>
-   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-      <Image url="/menu1.png"/>
-   </ImageView>
+               <VBox prefHeight="149.0" prefWidth="450.0" spacing="10.0">
+                  <children>
+                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Author">
+                        <font>
+                           <Font name="Tahoma" size="20.0" />
+                        </font>
+                     </Text>
+                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="MasterFlomaster1">
+                        <font>
+                           <Font name="Tahoma" size="14.0" />
+                        </font>
+                     </Text>
+                     <HBox alignment="BASELINE_LEFT" prefHeight="28.0" prefWidth="358.0">
+                        <children>
+                           <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Github profile:">
+                              <font>
+                                 <Font name="Tahoma" size="14.0" />
+                              </font>
+                           </Text>
+                           <Hyperlink onAction="#profileLinkAction" text="https://github.com/MasterFlomaster1">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Hyperlink>
+                        </children>
+                     </HBox>
+                  </children>
+               </VBox>
+            </children>
+         </HBox>
+      </children>
+   </VBox>
 
 </AnchorPane>
