--- a/src/GUI/FileHashPage.fxml
+++ b/src/GUI/FileHashPage.fxml
@@ -1,25 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FileHashPageController">
-   <Label layoutX="14.0" layoutY="66.0" text="Input File" textFill="WHITE">
-      <font>
-         <Font name="Tahoma" size="12.0" />
-      </font>
-   </Label>
-   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="36.0" layoutX="14.0" layoutY="81.0" stroke="BLACK" strokeType="INSIDE" width="572.0" />
-   <Label layoutX="269.0" layoutY="92.0" text="Drag'n'Drop" textFill="#bbbbbb">
-      <font>
-         <Font name="Tahoma" size="12.0" />
-      </font>
-   </Label>
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-      <Image url="/menu1.png"/>
+<!--      <Image url="/menu1.png"/>-->
    </ImageView>
+   <Text fill="WHITE" layoutX="261.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File hash">
+      <font>
+         <Font name="Tahoma" size="20.0" />
+      </font>
+   </Text>
+   <VBox layoutX="14.0" layoutY="58.0" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
+      <children>
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to work with">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Text>
+         <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
+            <children>
+               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" stroke="#009900" strokeType="INSIDE" width="572.0" />
+               <Text fill="#009900" layoutX="223.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
+                  <font>
+                     <Font name="System Italic" size="16.0" />
+                  </font>
+               </Text>
+               <Button id="browse" layoutX="14.0" layoutY="18.0" mnemonicParsing="false" text="Browse..." />
+               <Text fill="#2200ff" layoutX="91.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Text>
+            </children>
+         </Pane>
+         <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="572.0">
+            <children>
+               <Button layoutX="211.0" mnemonicParsing="false" text="Hash" />
+            </children>
+         </Pane>
+         <TextArea maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="572.0" wrapText="true">
+            <font>
+               <Font name="Tahoma" size="12.0" />
+            </font>
+         </TextArea>
+      </children>
+   </VBox>
 </AnchorPane>
